<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FAQ_Activity">

    <LinearLayout
        android:orientation="vertical"
        android:weightSum="10"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:elevation="4dp"
            app:title="Profile"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#E32636"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:onClick="Q1"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp"
            app:contentPadding="20dp">

        <LinearLayout
            android:id="@+id/Q1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:animateLayoutChanges="true">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Q1"
                android:textColor="@color/colorAccent"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Ans1"
                android:layout_width="wrap_content"
                android:textSize="18sp"
                android:visibility="gone"
                android:layout_height="wrap_content"
                android:text="@string/Ans1"
                tools:ignore="HardcodedText" />

        </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:onClick="Q2"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp"
            app:contentPadding="20dp">

            <LinearLayout
                android:id="@+id/Q2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:animateLayoutChanges="true">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Q2"
                    android:textColor="@color/colorAccent"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/Ans2"
                    android:layout_width="wrap_content"
                    android:textSize="18sp"
                    android:visibility="gone"
                    android:layout_height="wrap_content"
                    android:text="@string/Ans2"
                    tools:ignore="HardcodedText" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:onClick="Q3"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp"
            app:contentPadding="20dp">

            <LinearLayout
                android:id="@+id/Q3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:animateLayoutChanges="true">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Q3"
                    android:textColor="@color/colorAccent"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/Ans3"
                    android:layout_width="wrap_content"
                    android:textSize="18sp"
                    android:visibility="gone"
                    android:layout_height="wrap_content"
                    android:text="@string/Ans3"
                    tools:ignore="HardcodedText" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:onClick="Q4"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp"
            app:contentPadding="20dp">

            <LinearLayout
                android:id="@+id/Q4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:animateLayoutChanges="true">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Q4"
                    android:textColor="@color/colorAccent"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/Ans4"
                    android:layout_width="wrap_content"
                    android:textSize="18sp"
                    android:visibility="gone"
                    android:layout_height="wrap_content"
                    android:text="@string/Ans4"
                    tools:ignore="HardcodedText" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:onClick="Q5"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp"
            app:contentPadding="20dp">

            <LinearLayout
                android:id="@+id/Q5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:animateLayoutChanges="true">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Q5"
                    android:textColor="@color/colorAccent"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/Ans5"
                    android:layout_width="wrap_content"
                    android:textSize="18sp"
                    android:visibility="gone"
                    android:layout_height="wrap_content"
                    android:text="@string/Ans5"
                    tools:ignore="HardcodedText" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:onClick="Q6"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp"
            app:contentPadding="20dp">

            <LinearLayout
                android:id="@+id/Q6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:animateLayoutChanges="true">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Q6"
                    android:textColor="@color/colorAccent"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/Ans6"
                    android:layout_width="wrap_content"
                    android:textSize="18sp"
                    android:visibility="gone"
                    android:layout_height="wrap_content"
                    android:text="@string/Ans6"
                    tools:ignore="HardcodedText" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:onClick="Q7"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp"
            app:contentPadding="20dp">

            <LinearLayout
                android:id="@+id/Q7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:animateLayoutChanges="true">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Q7"
                    android:textColor="@color/colorAccent"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/Ans7"
                    android:layout_width="wrap_content"
                    android:textSize="18sp"
                    android:visibility="gone"
                    android:layout_height="wrap_content"
                    android:text="@string/Ans7"
                    tools:ignore="HardcodedText" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>





    </LinearLayout>


</ScrollView>